// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should welcome screen with no components message 1`] = `
<div>
  <_class
    text="# Welcome to React Styleguidist!"
  />
  <_class
    text="
  ## Point Styleguidist to your React components
  
  We couldn’t find any components defined in your style guide config or using the default pattern \`src/components/**/*.js\`.
  
  Create **styleguide.config.js** file in your project root directory like this:
  
      module.exports = {
        components: 'src/components/**/*.js'
      };
  
  Read more in the [locating components guide](https://github.com/styleguidist/react-styleguidist/blob/master/docs/Components.md).
  					"
  />
</div>
`;

exports[`renderer should welcome screen with no examples message 1`] = `
<div>
  <_class
    text="# Welcome to React Styleguidist!"
  />
  <_class
    text="
  
  ## Write your first example
  
  Create **Readme.md** or **ComponentName.md** file in the component’s folder like this:
  
      React component example:
  
          &lt;Button size=\\"large\\"&gt;Push Me&lt;/Button&gt;
  
  Read more in the [documenting components guide](https://github.com/styleguidist/react-styleguidist/blob/master/docs/Documenting.md).
  					"
  />
</div>
`;
